--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
 
 body {
   font-family: "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro",
-    "メイリオ", Meiryo, "ＭＳ Ｐゴシック", sans-serif;
+    "Biz UDPGothic", "メイリオ", Meiryo, "ＭＳ Ｐゴシック", sans-serif;
   margin: 0;
   background: linear-gradient(to right, #f0f8ff, #e6e6fa, #ffe4e1);
 }
@@ -27,31 +27,34 @@ body {
     width: 25vw;
     padding-right: var(--space-m);
   }
-  .action-query {
+  .action-center {
     display: flex;
     align-items: center;
     max-width: 50vw;
     width: 50vw;
     
-    border-radius: 32px;
-    box-shadow: 1px 1px 1px lightgray;
-    padding: var(--space-m);
-    background-color: white;
-
-    & input {
-      border: 0;
-    }
-    & input:focus {
-      outline: none;
-    }
-    .query {
-      font-size: large;
+    .action-query {
+      display: flex;
       width: 100%;
-    }
-  }
+      border-radius: 32px;
+      box-shadow: 1px 1px 1px lightgray;
+      padding: var(--space-m);
+      background-color: white;
 
-  div.icon-search {
-    margin-right: var(--space-s);
+      & input {
+        border: 0;
+      }
+      & input:focus {
+        outline: none;
+      }
+      .query {
+        font-size: large;
+        width: 100%;
+      }
+      div.icon-search {
+        margin-right: var(--space-s);
+      }
+    }
   }
   .action-right {
     width: 25vw;
@@ -63,11 +66,14 @@ body {
   margin: 0 var(--space-m);
   
   .tag-content {
-    padding: var(--space-m);
     vertical-align: top;
+    padding: var(--space-m);
+
+    > ul {
+      padding-left: 0;
+    }
   }
-  
-  li.tag-group {
+  li.tag {
     display: inline-block;
     margin-bottom: var(--space-l);
     border-radius: 16px;
@@ -75,24 +81,21 @@ body {
     width: 100%;
     box-shadow: 17px 20px 40px rgba(0, 0, 0, .21);
   }
-  
   div.tag-name {
     padding-bottom: var(--space-m);
     font-weight: bold;
   }
-  
   li.item {
     list-style: none;
     overflow: hidden;
     text-overflow: ellipsis;
+    font-size: small;
   }
-  
   li.item a {
     text-decoration: none;
     color: blue;
     white-space: nowrap;
   }
-  
   li.item a:hover {
     color: green;
   }
