Add feature to copy bookmarks to clipboard as JSON
* Add `copyBookmarksToClipboard` method to handle copying bookmarks to clipboard as JSON
* Add button in the template section to trigger copying bookmarks to clipboard as JSON
* Update CSS class `.bookarklet` to `.icon` and add cursor pointer style

--- a/styles.css
+++ b/styles.css
@@ -63,10 +63,11 @@ body {
     align-items: center;
     justify-content: flex-end;
     
-    .bookarklet {
+    .icon {
       font-size: xx-large;
       text-decoration: none;
       color: var(--primary);
+      cursor: pointer;
     }
   }
 }
